apps/stream/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream
  labels:
    app.kubernetes.io/name: stream
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stream
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stream
    spec:
      containers:
        - name: stream
          image: ghcr.io/dynamicskillset/stream:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: stream-nginx
